--- a/podfile
+++ b/podfile
@@ -2,6 +2,8 @@ platform :ios, '8.0'
 use_frameworks!
 
 target 'AllstateCarProject' do
+	pod 'SwiftyJSON', :git => 'https://github.com/SwiftyJSON/SwiftyJSON.git'
+	pod 'Alamofire', '~> 3.0'
 	pod 'FMDB'
 	# pod 'FMDB/FTS'   # FMDB with FTS
 	# pod 'FMDB/standalone'   # FMDB with latest SQLite amalgamation source
